syntax = "proto3";
option java_package = "ru.pavkin.ihavemoney.proto";
option optimize_for = SPEED;
import "common.proto";

message PBCommandEnvelope {
	string aggregateId = 1;
	oneof command {
		PBReceiveIncome command1 = 2;
		PBSpend command2 = 3;
		PBCreateUser command3 = 4;
		PBConfirmEmail command4 = 5;
		PBLogIn command5 = 6;
		PBResendConfirmationEmail command6 = 7;
		PBCreateFortune command7 = 8;
		PBAddEditor command8 = 9;
		PBFinishInitialization command9 = 10;
		PBBuyAsset command10 = 11;
		PBSellAsset command11 = 12;
		PBReevaluateAsset command12 = 13;
		PBTakeOnLiability command13 = 14;
		PBPayLiabilityOff command14 = 15;
		PBExchangeCurrency command15 = 16;
		PBCorrectBalances command16 = 17;
		PBUpdateLimits command17 = 18;
		PBCancelTransaction command18 = 19;
	}
}

message PBFinishInitialization {
	string id = 14;
	string userId = 1;
}

message PBReceiveIncome {
	string id = 14;
	string userId = 1;
	string amount = 2;
	string currency = 3;
	string category = 4;
	bool initializer = 5;
	string comment = 15;
}

message PBSpend {
	string id = 14;
	string userId = 1;
	string amount = 2;
	string currency = 3;
	string category = 4;
	string overrideDate = 6;
	bool initializer = 5;
	string comment = 15;
}

message PBExchangeCurrency {
	string id = 14;
	string userId = 1;
	string fromAmount = 2;
	string fromCurrency = 3;
	string toAmount = 4;
	string toCurrency = 5;
	string comment = 15;
}

message PBCorrectBalances {
	string id = 14;
	string userId = 1;
	map<string,string> realBalances = 2;
	string comment = 15;
}

message PBBuyAsset {
	string id = 14;
	string userId = 1;
	PBAsset asset = 2;
	bool initializer = 3;
	string comment = 15;
}

message PBSellAsset {
	string id = 14;
	string userId = 1;
	string assetId = 2;
	string comment = 15;
}

message PBReevaluateAsset {
	string id = 14;
	string userId = 1;
	string assetId = 2;
	string newPrice = 3;
	string comment = 15;
}

message PBTakeOnLiability {
	string id = 14;
	string userId = 1;
	PBLiability liability = 2;
	bool initializer = 3;
	string comment = 15;
}

message PBPayLiabilityOff {
	string id = 14;
	string userId = 1;
	string liabilityId = 2;
	string byAmount = 3;
	string comment = 15;
}

message PBCreateFortune {
	string id = 14;
	string ownerId = 1;
}

message PBAddEditor {
	string id = 14;
	string userId = 1;
	string editorId = 2;
}

message PBCreateUser {
	string id = 14;
	string password = 1;
	string displayName = 2;
}

message PBConfirmEmail {
	string id = 14;
	string confirmationCode = 1;
}

message PBLogIn {
	string id = 14;
	string password = 1;
}

message PBResendConfirmationEmail {
	string id = 14;
}

message PBUpdateLimits {
	string id = 14;
	string userId = 1;
	map<string, PBWorth> weekly = 2;
	map<string, PBWorth> monthly = 3;
}

message PBCancelTransaction {
	string id = 14;
	string userId = 1;
	string transactionId = 2;
}
